--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,15 @@ services:
     volumes:
       - ./frontend:/frontend
     command: sh -c "npm install && npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./frontend/src
+          target: /frontend/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./frontend/package.json
 
   # AUTH SERVICE
   auth-service-1:
@@ -33,6 +42,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run migration:run && npm run seed && npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/auth/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/auth/package.json
 
   auth-service-2:
     build: ./services/auth
@@ -44,6 +62,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/auth/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/auth/package.json
 
   auth-db:
     image: postgres:15-alpine
@@ -67,6 +94,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run migration:run && npm run seed && npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/inventory/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/inventory/package.json
 
   inventory-service-2:
     build: ./services/inventory
@@ -78,6 +114,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/inventory/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/inventory/package.json
 
   inventory-db:
     image: postgres:15-alpine
@@ -101,6 +146,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run migration:run && npm run seed && npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/products/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/products/package.json
 
   products-service-2:
     build: ./services/products
@@ -112,6 +166,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/products/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/products/package.json
 
   products-db:
     image: postgres:15-alpine
@@ -135,6 +198,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run migration:run && npm run seed && npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/sales/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/sales/package.json
 
   sales-service-2:
     build: ./services/sales
@@ -146,6 +218,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/sales/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/sales/package.json
 
   sales-db:
     image: postgres:15-alpine
@@ -169,6 +250,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run migration:run && npm run seed && npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/store/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/store/package.json
 
   store-service-2:
     build: ./services/store
@@ -180,6 +270,15 @@ services:
     networks:
       - microservices
     command: sh -c "npm run dev"
+    develop:
+      watch:
+        - action: sync
+          path: ./services/store/src
+          target: /app/src
+          ignore:
+            - node_modules/
+        - action: rebuild
+          path: ./services/store/package.json
 
   store-db:
     image: postgres:15-alpine
